@@ -1,3 +1,12 @@
+2010-01-18  Yuzo Fujishima  <yuzo@google.com>
+
+        Reviewed by Darin Adler.
+
+        Skip an error after invalid blocks in a CSS expression.
+        https://bugs.webkit.org/show_bug.cgi?id=33650
+
+        * css/CSSGrammar.y:
+
 2010-01-15  Gavin Barraclough  <barraclough@apple.com>
 
         Reviewed by Darin Adler & Oliver Hunt.
